--- a/src/components/sidebar/profile/profile.css
+++ b/src/components/sidebar/profile/profile.css
@@ -1,6 +1,6 @@
 .profile-container {
     width: 27%;
-    padding:2rem;
+    padding:3rem;
     background-color: #15181c !important;
     border-radius: 3%;
     color:white;
@@ -34,3 +34,36 @@
     height: 0%;
 }
 
+/* Profile details */
+.profile-user-tags {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-user-tags > * {
+    margin: 0.3rem; /* Adjust the margin on individual elements */
+}
+.profile-username {
+}
+.profile-name {
+}
+.profile-bio {
+    margin-top: 1rem;
+}
+
+.profile-details {
+    display: flex;
+    align-items: center;
+    gap:1rem;
+    margin-top: 2rem;
+}
+
+.profile-pfp {
+    width:150px;
+    height: 90px;
+}
+
+.profile-pfp img {
+    width: 100%;
+    height: 100%;
+}
