users can like posts and will update on db, seperated functions getposts on page load, liking a post, and add post's code logic to seperate files for organization

--- a/src/components/mainfeed/mainfeed.css
+++ b/src/components/mainfeed/mainfeed.css
@@ -78,3 +78,12 @@
     font-size: .9rem;
     padding-top:3px ;
 }
+.like-icon {
+    position: relative;
+}
+.postLikes {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-weight: 800;
+}
