changed user ui, added playpen sans font, user can click through posts and replies through eachother, fixed usersrightside tab to nav to profile with posts being updated, added an alert for wrong login credentials, user can delete a post they've posted,working on replies tab on profile page

--- a/src/components/mainfeed/postLogic/viewPost/viewPost.css
+++ b/src/components/mainfeed/postLogic/viewPost/viewPost.css
@@ -22,17 +22,19 @@
     align-items: center;
 }
 
-.viewPost-btns {
-    padding:.5rem 0rem;
-}
 
 .userreply {
     display: flex;
     flex-direction: column;
     gap: .5rem;
+    overflow-y: hidden;
+}
+.userreply-footer {
+    display: flex;
+    
 }
 .addComment {
-    background-color: navy;
+    background-color: #1976d2;
     color:white;
     padding:1em;
     width: 140px;
@@ -40,3 +42,23 @@
     margin-left: auto;
 }
 
+.profile-container {
+    overflow-y: hidden;
+}
+
+.viewPost-original-msg {
+    overflow-y: hidden;
+}
+.viewPost-btns {
+    padding:.5rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.left-viewPost {
+    display: flex;
+    align-items: center;
+    gap:1rem;
+}
