--- a/src/components/mainfeed/mainfeed.css
+++ b/src/components/mainfeed/mainfeed.css
@@ -3,6 +3,9 @@
     padding:3rem;
     background-color: #15181c;
     border-radius: 3%;
+    position:absolute;
+    left: 30%;
+    top:5%;
 }
 .addPost {
     width:25%;
@@ -12,6 +15,12 @@
 .userpost {
     display:flex;
     flex-direction: column;
+    overflow-y: hidden;
+}
+
+.userpost-footer {
+    display:flex;
+    justify-content: space-between;
 }
 .apost {
     display: flex;
@@ -45,6 +54,7 @@
     height: 0px;
 }
 
+
 .post-message {
     padding: 1rem;
 }
@@ -57,6 +67,7 @@
 .post-btns {
     display: flex;
     flex-direction: row;
+    gap:1rem;
 }
 .post-btn {
     color:#343a40;
@@ -74,8 +85,6 @@
     position: relative;
 }
 .postLikes {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
     font-weight: 800;
+    margin-left: 10px;
 }
