added post time ago timestamp, fix -1 when user initially clicks if they already clicked, user input textbox goes blank after posting or posting reply, shows post count for each user to sese how many posts they have, added replies tab so you can sees who the user has replies to

--- a/src/components/sidebar/profile/profile.css
+++ b/src/components/sidebar/profile/profile.css
@@ -81,3 +81,12 @@
     width: 100%;
     height: 100%;
 }
+
+.usertags{
+    display: flex;
+    flex-direction: column;
+}
+.usertags:before{
+    margin-top: -10px;
+
+}
