--- a/src/components/usersbar/usersbar.css
+++ b/src/components/usersbar/usersbar.css
@@ -1,11 +1,11 @@
 .usersbar {
     position: fixed;
-    right:18%;
+    right:10%;
     top:5%;
-    width: 15%;
+    width: 405px;
     background-color: #15181c;
     border-radius: 3%;
-    height: 720px;
+    height: 870px;
     padding: 2rem;
 }
 
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     gap:.5rem;
+    font-size: 1.4rem;
 }
 
 .randUser {
@@ -23,7 +24,7 @@
 }
 
 .randUser-username {
-    font-size: .85rem;
+    font-size: 1rem;
 }
 
 .stalk-Randuser {
