--- a/src/components/mainfeed/mainfeed.css
+++ b/src/components/mainfeed/mainfeed.css
@@ -1,16 +1,19 @@
 .mainfeed {
     width: 30%;
-    padding:3rem;
     background-color: #15181c;
     border-radius: 3%;
-    position:absolute;
-    left: 31%;
-    top:5%;
+    padding: 3rem;
 }
 .addPost {
     width:25%;
     margin-top: 1rem !important;
     
+}
+
+.disabledPostButton {
+    opacity: 20%;
+    color: white !important;
+    background-color:#1976d2 !important;
 }
 .userpost {
     display:flex;
@@ -35,7 +38,6 @@
 .pfp-img-container img {
     width: 100%;
 }
-
 .mainpost {
     display: flex;
     flex-direction: column;
@@ -92,14 +94,6 @@
     margin-left: 10px;
 }
 
-.bottom-nav {
-     background-color: #1f2227 !important;
-     width: 99.9%;
-     position: fixed;
-     bottom: 0;
-     margin-left: -3rem;
-     padding: .3rem;
-}
 
 @media (min-width: 1800px) {
     .bottom-nav {
@@ -125,28 +119,56 @@
         font-size: 1.2rem !important;
     }
     .mainfeed {
-        width: 40% !important;
-        left: 26%;
-        top:5%;
+        width: 40%; /* Adjust as needed */
+        margin: 0 auto !important; /* Center the mainfeed */
+        top: 5%;
     }
+
+    
 }
 
+
+
+
+
+
 @media (max-width: 1800px) {
+    .mainfeed, .bottom-nav {
+        box-sizing: border-box !important; /* Include padding and border in the width */
+    }
     html {
-        background-color: #15181c !important;
+        background-color: black !important;
     }
     .Sidebar {
         display: none;
+        width: 50% !important;
+        left: 25%;
+        top:3%;
     }
     .usersbar {
       display: none;
+      width: 50% !important;
+      left: 25%;
+      top:3%;
     }
     .mainfeed {
-        width: 95% !important;
-        left: 0%;
+        position: relative;
+        width: 850px !important;
+        margin: auto 0;
         top:0%;
-        border-radius: 0%;
+        border-left:.5px solid rgb(65, 65, 65);
+        border-right:.5px solid rgb(65, 65, 65);
     }
+
+    .bottom-nav {
+        background-color: #1f2227 !important;
+        position: fixed;
+        margin: auto 0;
+        bottom: -.5%;
+        width: inherit; /* Inherit the width from the parent */
+    }
+
+    
     .profile-container {
         left: 0 !important;
         top:0% !important;
