--- a/src/LoginAuth/auth.css
+++ b/src/LoginAuth/auth.css
@@ -10,6 +10,7 @@
     width: 15%;
     height: 500px;
     padding: 5rem;
+    gap:1rem;
     display: flex;
     justify-content: center;
     align-items: center;
